# bladerunner

./: .bazelignore  .gitignore  BUILD.bazel  README.md  TODO.md  WORKSPACE  deps.bzl  gazelle.sh  go.mod  go.sum  netlify.toml
ansible/: cluster.yml  inventory
ansible/roles/base/: README.md
ansible/roles/base/tasks/: main.yml
ansible/roles/coral/: README.md
docs/: Makefile  conf.py  dev.rst  index.rst  intro.rst  network.rst  node-provisioning.rst  packer.rst  requirements.txt  tools.rst
packer/: BUILD  BUILD.bazel  Dockerfile  README.md  build-image.sh  install-packer.sh  run-docker.sh  setup-env.sh  ubuntu-board-gen.go  ubuntu-boards.yml
packer/boards/: cm4-cdev-ubuntu-22.04.2.json  cm4-cluster-ubuntu-22.04.2.json  cm4-cnode-ubuntu-22.04.2.json  cm4-router-ubuntu-22.04.2.json  rp4-cdev-ubuntu-22.04.2.json
packer/files/: authorized_keys  dnsmasq.conf  hosts  netplan-dev.yaml  netplan-node.yaml  netplan-router.yaml  tailscale.service  user-data  user-data_cdev  user-data_cnode  user-data_router
packer/packerlib/: BUILD.bazel  board.go  builder.go  packer.go  provisioner.go  ubuntu.go  ubuntu_test.go
packer/scripts/: install-base.sh  setup-base.sh  setup-cdev.sh  setup-ssh.sh
src/cmd/ubuntu-board-gen/: BUILD.bazel  main.go
src/packer/: BUILD.bazel  board.go  builder.go  packer.go  provisioner.go  ubuntu.go
tools/: BUILD  Dockerfile  install-bazel.sh  install-dependencies.sh  install-go.sh  install.sh
