load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "packerlib",
    srcs = [
        "board.go",
        "builder.go",
        "packer.go",
        "provisioner.go",
        "ubuntu.go",
    ],
    importpath = "git.wntrmute.dev/kyle/bladerunner/packer/packerlib",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_yaml_v2//:yaml_v2"],
)

go_test(
    name = "packerlib_test",
    srcs = ["ubuntu_test.go"],
    embed = [":packerlib"],
)
